syntax = "proto3";

package ai.metathings.service.identity;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "group.proto";

message ListGroupsForUserRequest {
	google.protobuf.StringValue user_id = 1 [(validator.field) = {msg_exists: true}];
}

message ListGroupsForUserResponse {
	repeated Group groups = 1;
}
