syntax = "proto3";

package ai.metathings.service.identity;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "role.proto";

message ListRolesForUserOnProjectRequest {
	google.protobuf.StringValue project_id = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue user_id = 2 [(validator.field) = {msg_exists: true}];
}

message ListRolesForUserOnProjectResponse {
	repeated Role roles = 1;
}
