syntax = "proto3";

package ai.metathings.service.identity;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "user.proto";

message ListUsersRequest {
	// ignore identity provider id
	reserved 3;
	reserved "idp_id";
	// ignore protocol id
	reserved 5;
	reserved "protocol_id";
	// ignore unique id
	reserved 6;
	reserved "unique_id";
	// ignore password_expires_at
	reserved 7;
	reserved "password_expires_at";

	google.protobuf.StringValue domain_id = 1;
	google.protobuf.BoolValue enabled = 2;
	google.protobuf.StringValue name = 4;
}

message ListUsersResponse {
	repeated User users = 1;
}
