syntax = "proto3";

package ai.metathings.service.identity;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "user.proto";

message PatchUserRequest {
	reserved 3;
	reserved "name";
	// Deprecated
	reserved "domain_id";

	google.protobuf.StringValue user_id = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue default_project_id = 2;
	// Disable change name feature
	// google.protobuf.StringValue name = 3;
	google.protobuf.StringValue password = 4;
	google.protobuf.BoolValue enabled = 5;
	map<string, string> extra = 6;
}

message PatchUserResponse {
	User user = 1;
}
