syntax = "proto3";

package ai.metathings.service.identityd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

message ChangePasswordRequest {
	google.protobuf.StringValue user_id = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue original_password = 2 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue password = 3 [(validator.field) = {msg_exists: true}];
}
