syntax = "proto3";

package ai.metathings.service.identityd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "user.proto";

message GetUserRequest {
	google.protobuf.StringValue user_id = 1 [(validator.field) = {msg_exists: true}];
}

message GetUserResponse {
	User user = 1;
}
