syntax = "proto3";

package ai.metathings.service.identityd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "region.proto";

message ListRegionsRequest {
	google.protobuf.StringValue parent_region_id = 1;
}

message ListRegionsResponse {
	repeated Region regions = 1;
}
