syntax = "proto3";

package ai.metathings.service.identityd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "role.proto";

message ListRolesForGroupOnDomainRequest {
	google.protobuf.StringValue domain_id = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue group_id = 2 [(validator.field) = {msg_exists: true}];
}

message ListRolesForGroupOnDomainResponse {
	repeated Role roles = 1;
}
