syntax = "proto3";

package ai.metathings.service.identityd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

message RemoveUserFromGroupRequest {
	google.protobuf.StringValue user_id = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue group_id = 2 [(validator.field) = {msg_exists: true}];
}
