syntax = "proto3";

package ai.metathings.service.identityd2;

import "validate/validate.proto";

import "model.proto";

message DeleteRoleRequest {
	OpRole role = 1 [(validate.rules).message.required = true];
}
