syntax = "proto3";

package ai.metathings.service.identityd2;

import "google/protobuf/wrappers.proto";

import "model.proto";

message ListRolesRequest {
	OpRole role = 1;
}

message ListRolesResponse {
	repeated Role roles = 1;
}
