syntax = "proto3";

package ai.metathings.service.identity;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "project.proto";

message GetProjectRequest {
	google.protobuf.StringValue project_id = 1 [(validator.field) = {msg_exists: true}];
}

message GetProjectResponse {
	Project project = 1;
}
