syntax = "proto3";

package ai.metathings.service.identity;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "region.proto";

message GetRegionRequest {
	google.protobuf.StringValue region_id = 1 [(validator.field) = {msg_exists: true}];
}

message GetRegionResponse {
	Region region = 1;
}
