syntax = "proto3";

package ai.metathings.service.identity;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "application_credential.proto";

message ListApplicationCredentialsRequest {
	google.protobuf.StringValue user_id = 1;
}

message ListApplicationCredentialsResponse {
	repeated ApplicationCredential application_credentials = 1;
}
