syntax = "proto3";

package ai.metathings.service.identity;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "role.proto";

message ListRolesForGroupOnProjectRequest {
	google.protobuf.StringValue project_id = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue group_id = 2 [(validator.field) = {msg_exists: true}];
}

message ListRolesForGroupOnProjectResponse {
	repeated Role roles = 1;
}
