syntax = "proto3";

package ai.metathings.service.identityd2;
option go_package = "github.com/nayotta/metathings/proto/identityd2";

import "model.proto";

message CreateGroupRequest {
	OpGroup group = 1;
}

message CreateGroupResponse {
	Group group = 1;
}
