syntax = "proto3";

package ai.metathings.service.identityd2;
option go_package = "github.com/nayotta/metathings/proto/identityd2";

import "model.proto";

message CreateRoleRequest {
	OpRole role = 1;
}

message CreateRoleResponse {
	Role role = 1;
}
