syntax = "proto3";

package ai.metathings.service.identityd2;

import "validate/validate.proto";

import "model.proto";

message GetGroupRequest {
	OpGroup group = 1 [(validate.rules).message.required = true];
}

message GetGroupResponse {
	Group group = 1;
}
