syntax = "proto3";

package ai.metathings.service.identityd2;
option go_package = "github.com/nayotta/metathings/proto/identityd2";

import "model.proto";

message GetRoleRequest {
	OpRole role = 1;
}

message GetRoleResponse {
	Role role = 1;
}
