syntax = "proto3";

package ai.metathings.service.identityd2;
option go_package = "github.com/nayotta/metathings/proto/identityd2";

import "model.proto";

message ListDomainsRequest {
	OpDomain domain = 1;
}

message ListDomainsResponse {
	repeated Domain domains = 1;
}
