syntax = "proto3";

package ai.metathings.service.identityd2;

import "model.proto";

message ListGroupsRequest {
	OpGroup group = 1;
}

message ListGroupsResponse {
	repeated Group groups = 1;
}
