syntax = "proto3";

package ai.metathings.service.identityd2;
option go_package = "github.com/nayotta/metathings/proto/identityd2";

import "model.proto";

message PatchGroupRequest {
	OpGroup group = 1;
}

message PatchGroupResponse {
	Group group = 1;
}
